fix(comp:tree): lines are not aligned (#1393)

--- a/packages/components/tree-select/style/themes/seer.variable.less
+++ b/packages/components/tree-select/style/themes/seer.variable.less
@@ -2,5 +2,6 @@
 
 @tree-select-border-radius: @border-radius-sm;
 
-@tree-select-option-container-padding: 4px 0;
 @tree-select-option-font-size: @font-size-sm;
+@tree-select-option-container-padding: 4px 0;
+@tree-select-option-container-tree-node-padding: 0 0 0 @spacing-sm;
