--- a/packages/components/tree/style/index.less
+++ b/packages/components/tree/style/index.less
@@ -58,11 +58,8 @@
     }
   }
 
-  &-show-line {
+  &.@{tree-prefix}&-show-line {
     .@{tree-node-prefix} {
-      &-content-prefix {
-        padding-left: 8px;
-      }
 
       &-last {
         .@{tree-node-prefix}-leaf-line {
@@ -88,7 +85,9 @@
         &::after {
           position: absolute;
           top: calc(50% - @tree-node-line-size / 2);
-          width: (@tree-node-content-height / 4);
+          right: -2px;
+          width: (@tree-node-icon-width / 4);
+          z-index: 1;
           .horizontal-line();
 
           content: ' ';
@@ -122,8 +121,8 @@
         &::before {
           position: absolute;
           top: -@tree-node-padding-vertical;
-          right: (@tree-node-content-height / 2);
-          bottom: -@tree-node-padding-vertical;
+          right: (@tree-node-icon-width / 2);
+          bottom: -@tree-node-padding-vertical + 1;
           .vertical-line();
 
           content: '';
@@ -131,154 +130,160 @@
       }
     }
   }
-}
 
-.@{tree-node-prefix} {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: @tree-node-padding-vertical 0;
-  white-space: nowrap;
-
-  .@{icon-prefix} {
-    font-size: @tree-icon-font-size;
-  }
-
-  &-indent {
-    &-noop-unit,
-    &-unit {
-      display: inline-block;
-      width: @tree-node-content-height;
-    }
-  }
-
-  &-draggable-icon {
-    cursor: pointer;
-    opacity: 0.4;
-    text-align: center;
-    transition: opacity @transition-duration-base @ease-in-out;
-    width: @tree-node-content-height;
-
-    &-noop {
-      width: @tree-node-content-height;
-    }
-  }
-
-  &-expand {
-    width: @tree-node-content-height;
-    line-height: @tree-node-content-height;
-    text-align: center;
-    cursor: pointer;
-
-    &-noop {
-      cursor: default;
-    }
-  }
-
-  &-checkbox {
-    margin: @tree-node-checkbox-margin;
-  }
-
-  &-leaf {
-    width: @tree-node-content-height;
-    align-self: stretch;
-    text-align: center;
+  .@{tree-node-prefix} {
+    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
-    cursor: default;
+    padding: @tree-node-padding-vertical 0;
+    white-space: nowrap;
 
-    &-line {
-      position: relative;
-      z-index: 1;
-      display: block;
-      height: 100%;
-      width: 100%;
-
-      &::before {
-        position: absolute;
-        top: -@tree-node-padding-vertical;
-        right: (@tree-node-content-height / 2);
-        bottom: -@tree-node-padding-vertical;
-        .vertical-line();
-
-        content: ' ';
-      }
-
-      &::after {
-        position: absolute;
-        top: 50%;
-        bottom: 0;
-        left: 55%;
-        right: 0;
-        .horizontal-line();
-
-        content: ' ';
-      }
-    }
-  }
-
-  &-content {
-    position: relative;
-    display: inline-flex;
-    cursor: pointer;
-    min-height: @tree-node-content-height;
-    line-height: @tree-node-content-height;
-    transition: background-color @transition-duration-base;
-
-    &:hover {
-      background-color: @tree-node-hover-background-color;
+    .@{icon-prefix} {
+      font-size: @tree-icon-font-size;
     }
 
-    &-prefix,
-    &-suffix {
+    &-indent {
+      &-noop-unit,
+      &-unit {
+        display: inline-block;
+        width: @tree-node-icon-width;
+      }
+    }
+
+    &-draggable-icon {
+      cursor: pointer;
+      opacity: 0.4;
+      transition: opacity @transition-duration-base @ease-in-out;
+      width: @tree-node-icon-width;
+      height: @tree-node-content-height;
       display: flex;
-      justify-items: center;
       align-items: center;
-    }
+      justify-content: center;
 
-    &-label {
-      display: inline-block;
-      flex-grow: 1;
-      padding: @tree-node-content-label-padding;
-
-      &-highlight {
-        color: @tree-node-content-label-highlight-color;
+      &-noop {
+        width: @tree-node-icon-width;
       }
     }
-  }
 
-  &-active:not(&-disabled) &-content {
-    background-color: @tree-node-hover-background-color;
-  }
+    &-expand {
+      width: @tree-node-icon-width;
+      height: @tree-node-content-height;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
 
-  &-selected:not(&-disabled) &-content {
-    background-color: @tree-node-selected-background-color;
-    color: @tree-node-selected-color;
-    &:hover {
+      &-noop {
+        cursor: default;
+      }
+    }
+
+    &-checkbox {
+      margin: @tree-node-checkbox-margin;
+    }
+
+    &-leaf {
+      width: @tree-node-icon-width;
+      align-self: stretch;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: default;
+
+      &-line {
+        position: relative;
+        z-index: 1;
+        display: block;
+        height: 100%;
+        width: 100%;
+
+        &::before {
+          position: absolute;
+          top: -@tree-node-padding-vertical;
+          right: (@tree-node-icon-width / 2);
+          bottom: -@tree-node-padding-vertical + 1;
+          .vertical-line();
+
+          content: ' ';
+        }
+
+        &::after {
+          position: absolute;
+          top: 50%;
+          bottom: 0;
+          left: 55%;
+          right: 0;
+          .horizontal-line();
+
+          content: ' ';
+        }
+      }
+    }
+
+    &-content {
+      position: relative;
+      display: inline-flex;
+      cursor: pointer;
+      min-height: @tree-node-content-height;
+      line-height: @tree-node-content-height;
+      transition: background-color @transition-duration-base;
+      padding: @tree-node-content-padding;
+
+      &:hover {
+        background-color: @tree-node-hover-background-color;
+      }
+
+      &-prefix,
+      &-suffix {
+        display: flex;
+        justify-items: center;
+        align-items: center;
+      }
+
+      &-label {
+        display: inline-block;
+        flex-grow: 1;
+        padding: @tree-node-content-label-padding;
+
+        &-highlight {
+          color: @tree-node-content-label-highlight-color;
+        }
+      }
+    }
+
+    &-active:not(&-disabled) &-content {
       background-color: @tree-node-hover-background-color;
     }
-  }
 
-  &-disabled &-content {
-    color: @tree-node-disabled-color;
-    cursor: not-allowed;
-
-    &:hover {
-      background: transparent;
+    &-selected:not(&-disabled) &-content {
+      background-color: @tree-node-selected-background-color;
+      color: @tree-node-selected-color;
+      &:hover {
+        background-color: @tree-node-hover-background-color;
+      }
     }
-  }
 
-  &-drop-parent,
-  &-drop-inside {
-    box-shadow: 0 0 0 @tree-box-shadow-size @tree-box-shadow-color;
-  }
+    &-disabled &-content {
+      color: @tree-node-disabled-color;
+      cursor: not-allowed;
 
-  &-drop-before &-content {
-    box-shadow: 0 -@tree-box-shadow-size 0 0 @tree-box-shadow-color;
-  }
+      &:hover {
+        background: transparent;
+      }
+    }
 
-  &-drop-after &-content {
-    box-shadow: 0 @tree-box-shadow-size 0 0 @tree-box-shadow-color;
+    &-drop-parent,
+    &-drop-inside {
+      box-shadow: 0 0 0 @tree-box-shadow-size @tree-box-shadow-color;
+    }
+
+    &-drop-before &-content {
+      box-shadow: 0 -@tree-box-shadow-size 0 0 @tree-box-shadow-color;
+    }
+
+    &-drop-after &-content {
+      box-shadow: 0 @tree-box-shadow-size 0 0 @tree-box-shadow-color;
+    }
   }
 }
