--- a/packages/pro/tree/style/themes/seer.variable.less
+++ b/packages/pro/tree/style/themes/seer.variable.less
@@ -1,3 +1,1 @@
 @import './default.variable.less';
-
-@pro-tree-node-padding: 0 0 0 4px;
